# redis-log-handler

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
redis_log_handler/: RedisLogHandler.py  __init__.py  redis_log_handler.py
tests/: conftest.py  helper_functions.py  test_base_handler.py  test_channel_handler.py  test_environment_vars.py  test_integration.py  test_key_handler.py  test_log_handler.py
