[metadata]
name = redis-log-handler
author = See AUTHORS
author-email = contact@adimian.com
summary = A log handler for the Python logging module, emitting all logs to specific Redis channels
description-file = README.md
long-description-content-type = text/markdown
home-page = https://gitlab.adimian.com/open-source/redis-log-handler
classifier =
    Development Status :: 4 - Beta
    Operating System :: POSIX
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
[files]
packages =
    redis_log_handler
[wheel]
universal = 1
[flake8]
max-line-length = 100
